[package]
authors = ["The Rust Project Developers"]
name = "rustc_back"
version = "0.0.0"

[lib]
name = "rustc_back"
path = "lib.rs"
crate-type = ["dylib"]

[dependencies]
syntax = { path = "../libsyntax" }
serialize = { path = "../libserialize" }
log = "0.4"
rand = { git = "https://github.com/EdSchouten/rand", branch = "cloudabi" }

[features]
jemalloc = []
